@@ -1,3 +1,8 @@
+2016-03-31  Marek Polacek  <polacek@redhat.com>
+
+	PR c/70297
+	* decl.c (duplicate_decls): Also set TYPE_ALIGN and TYPE_USER_ALIGN.
+
 2016-03-31  Richard Biener  <rguenther@suse.de>
 
 	PR c++/70430
